--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --env port=3000",
+    "build:prod": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development"
   },
   "keywords": [],
   "author": "",
@@ -12,14 +14,13 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/webpack": "^5.28.1",
+    "@types/webpack-dev-server": "^4.7.2",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1"
-  },
-  "dependencies": {
-    "ts-node-dev": "^2.0.0"
-  }
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"}
+
 }
