--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curs",
+  "name": "production_project_code_course",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,7 +32,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   }
 }
