implementation of the feature sliced design architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,18 @@
     "module": "ESNext",
     "target": "es5",
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
-    
   },
   "ts-node": {
-        "compilerOptions": {
-          "module": "CommonJS"
-        }
+    "compilerOptions": {
+      "module": "CommonJS"
     }
+  }
 }
