--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^7.0.0",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.2.1"
   }
 }
